--- a/rubix24/package.json
+++ b/rubix24/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-icons": "^5.0.1",
+    "react-remove-scroll-bar": "^2.3.4",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
